--- a/T03-new-code.css
+++ b/T03-new-code.css
@@ -17,6 +17,10 @@ aside {
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
+    color: #ffffff;
+}
+aside * {
+    color: #ffffff !important;
 }
 main section {
     margin-bottom:20px;
