--- a/T03-new-code.css
+++ b/T03-new-code.css
@@ -43,7 +43,7 @@ main section:hover {
     box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1);
 }
 body {
-    font-family: ui-sans-serif, system-ui, -apple-system, sans-serif;
+    font-family: "Times New Roams, Times, serif;
     line-height: 1.5;
     color: #1e293b;
 }
