--- a/new-code-czach.css
+++ b/new-code-czach.css
@@ -7,7 +7,7 @@ nav ul {
     list-style: none;
     display: flex;
     justify-content: center;
-    gap: 25px; /* Spacing between links [cite: 183] */
+    gap: 25px;
     margin: 0;
 }
 
@@ -19,10 +19,9 @@ nav a {
 }
 
 nav a:hover {
-    color: #e67e22; /* Visible hover effect [cite: 184] */
+    color: #e67e22;
 }
 
-/* --- FOOTER --- */
 footer {
     background-color: #2c3e50;
     color: white;
